Fix in matrix scrollbar in designer

--- a/src/defaultV2-theme/blocks/sd-table.scss
+++ b/src/defaultV2-theme/blocks/sd-table.scss
@@ -95,7 +95,7 @@
   right: 0;
   z-index: 3;
 }
-.sd-question--table .sd-table__cell--actions:last-child {
+.sd-question--table.sd-element--with-frame#3814 .sd-table__cell--actions:last-child {
   .sv-action-bar {
     margin-right: -24px;
     justify-content: end;
